# sfm

./: .gitignore  benchmark_sift.py  compare.sh  extract_sift.sh  extract_sift_custom.sh  single_image.sh
benchmark/: Cargo.toml
benchmark/src/: main.rs
colmap/: .gitignore
colmap/src/colmap/tools/: CMakeLists.txt  sift_extract.cc
sift/: CMakeLists.txt  README.md  build_sift.sh
sift-rust/: Cargo.toml
sift-rust/src/: descriptor.rs  extractor.rs  keypoint.rs  lib.rs  main.rs  pyramid.rs
sift-wgpu/: Cargo.toml  README.md
sift-wgpu/src/: lib.rs  main.rs
sift/src/: feature_types.h  main.cc  sift_extractor.cc  sift_extractor.h
